# cpuminer-koto

./: AUTHORS  Dockerfile  LICENSE  Makefile.am  README.md  README.txt  RELEASE_NOTES  algo-gate-api.c  algo-gate-api.h  build.sh  buildjdd.sh  configure  configure.ac  cpu-miner.c  cpuminer-conf.json  cpuminer.1  cpuminer.vcxproj  cpuminer.vcxproj.filters  miner.h  util.c  winbuild-cross.sh
res/: cpuminer.rc
